--- a/homebridge/config.json
+++ b/homebridge/config.json
@@ -1,9 +1,9 @@
 {
-  "name": "Homebridge",
+  "name": "Homebridge Ring",
   "version": "dev",
-  "slug": "homebridge",
-  "description": "HomeKit support for your Home Assistant instance using Homebridge",
-  "url": "https://community.home-assistant.io/t/community-hass-io-add-on-homebridge/33803?u=frenck",
+  "slug": "homebridge-ring",
+  "description": "Run Ring on Homebridge",
+  "url": "https://github.com/pacorain/addon-homebridge",
   "startup": "application",
   "arch": [
     "aarch64",
